# smeta3d

./: CMakeLists.txt  README.md  configure-vc12-x64.bat  configure-vc17-x64.bat
cmake/: find_dependencies.cmake  make_default_output_directory.cmake
include/gui_basis/: mainwindow.h
include/kernel/ifc/: ICore.h
include/render/engine/ifc/: IContext.h  IEngine.h
include/system/: event_manager.h  uuid.h
include/system/ifc/: ievent.h
source/basis/: CMakeLists.txt
source/basis/base_kernel_impl/: CMakeLists.txt  Core.cpp  Core.h
source/gui_basis/: CMakeLists.txt  Context.cpp  Context.h  mainwindow.cpp
source/kernel/: CMakeLists.txt
source/main/: CMakeLists.txt  Context.cpp  Context.h  main.cpp
source/project/: CMakeLists.txt  Core.cpp  Core.h  GLContext.cpp  GLContext.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
source/render/: GLExt.cpp  GLExt.h
source/render/GL/: gl.h  glext.h
source/render/engine/: CContext.cpp  CMakeLists.txt  Engine.cpp  Engine.h
source/render/engine/gl_render_system/: GLContext.cpp  GLContext.h
source/render/engine/ifc/: IEngine.h
source/run/: CMakeLists.txt  main.cpp
source/system/: CMakeLists.txt  event_manager.cpp  uuid.cpp
source/test/: CMakeLists.txt  main.cpp
source/tests/test_event_manager/: CMakeLists.txt  main.cpp
source/tests/test_signals/: CMakeLists.txt  main.cpp
